# NimArchive

./: .gitignore  README.md  archive.py  pyproject.toml
.github/workflows/: archive-sync.yml  site-sync.yml
nimarchive/: __init__.py  archiver.py  main.py  server.py  sync_archive_org.py
scripts/: update_github_pages_branch.sh
site/: index.html  layout.js  main.js  packages.js  state.js
tests/: test_archiver.py
