[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nimarchive"
version = "0.1.0"
description = "Archive Nim package repositories and publish a browsable archive."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "internetarchive>=5.8.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
nimarchive-archiver = "nimarchive.archiver:main"
