[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nimarchive"
version = "0.1.0"
description = "Archive Nim package repositories and publish a browsable archive."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nimarchive-archiver = "archive:main"

[dependency-groups]
dev = []

[tool.setuptools]
py-modules = ["archive"]
